# skypro_drf_lessons

./: pyproject.toml
config/: settings.py  urls.py
fixtures/: Course.json  Lesson.json  Payments.json
online_school/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
online_school/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0002_initial.py  0003_alter_lesson_course.py  0003_payments_link_payments_session_id.py  0004_alter_payments_amount_alter_payments_link.py  0004_course_owner_lesson_owner.py
online_school/online_school/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py
users/users/: settings.py
